(executables
  (names
    test
    debuggable
    parser-unit-test
    integration)
  (flags -g)
  (modes byte native)
  (libraries str calc oUnit))

(alias
  (name runtest)
;  (deps (source_tree ./data))
  (action
    (progn (run ./test.bc)
    (run ./parser-unit-test.bc)
    (run ./integration.bc))
  )
)
